samples/_failures_safe/1760960368_da28f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2da79ef.c: In function ‘main’:
./samples/SAFE/__tmp_c2da79ef.c:151:9: error: expected declaration or statement at end of input
  151 |         printf("4. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_c2da79ef.c:151:9: error: expected declaration or statement at end of input
